--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@emotion/react": "^11.10.5",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@headlessui/react": "^1.6.6",
+    "@heycar-uikit/accordion": "^2.1.7",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@react-google-maps/api": "^2.13.1",
     "@splidejs/react-splide": "^0.7.10",
     "@types/mapbox-gl": "^2.7.5",
@@ -39,8 +42,10 @@
     "mapbox-gl": "^2.10.0",
     "markdown-to-jsx": "^7.1.7",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^5.0.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-awesome-reveal": "^4.1.0",
+    "react-bootstrap-accordion": "^1.0.0",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "^17.0.2",
     "react-element-to-jsx-string": "^15.0.0",
